--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">SuperChat</string>
+
+    <string name="login_screen_title">Registration</string>
+    <string name="login_button_text">Sign in</string>
+
+    <string name="chat_screen_title">Chat</string>
+
+    <!-- jеблозавры из гугла... -->
+    <string name="default_web_client_id">748059336336-tdd07r5eaunua41vpif8ntcvvnbh8pd8.apps.googleusercontent.com</string>
 </resources>
